--- a/css/style.css
+++ b/css/style.css
@@ -4,21 +4,20 @@
     font-weight: 100;
   }
   @font-face {
-    font-family: 'Fascinate';
-    src: url("/rsschool-cv/assets/fonts/Fascinate.zip");
+    font-family: 'Fascinate-Regular';
+    src: url("/rsschool-cv/assets/fonts/Fascinate/Fascinate-Regular.ttf");
     font-weight: 300;
   }
   @font-face {
-    font-family: 'Fascinate';
-    src: url("/rsschool-cv/assets/fonts/Fascinate.zip");
+    font-family: 'Fascinate-Regular';
+    src: url("/rsschool-cv/assets/fonts/Fascinate/Fascinate-Regular.ttf");
     font-weight: 100;
   }
   * {
     box-sizing: border-box;
   }
+  
   body {
-    min-height: 100vh;
-    margin: 0; padding: 0;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -29,6 +28,11 @@
   }
   html {
     scroll-behavior: smooth; 
+  }
+  .nav-list {
+    display: flex;
+    justify-content: flex-end;
+    align-items: center;
   }
     .nav-list {
         list-style: none;
@@ -48,4 +52,43 @@
   .section-item a:hover {
     color: #4d2323;
   }
- 
+  .container {
+    display: flex;
+    flex-wrap: wrap;
+  }
+  
+  .section {
+    width: 50%;
+  }
+  @media (max-width: 768px) {
+    .section {
+      width: 100%;
+    }
+  }
+  body {
+    font-family: 'Oswald', sans-serif;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 2;
+    color: #180e0e;
+  }
+  .section-title {
+    font-family: 'Fascinate-Regular';
+    font-size: 20px;
+    font-weight: 400;
+    text-transform: uppercase;
+    letter-spacing: 10px;
+    color: #5e1006;
+  }
+  .nav-link {
+    text-decoration: none;
+    color: #180e0e;
+    transition: color 0.5s;
+  }
+  
+  .link-hover {
+    text-decoration: none;
+    color: #180e0e;
+    transition: color 0.5s;
+  }
+  
